--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>For My Sweet Valentine 💕</h1>
+    <h1>For My Sweet Valentine. 💕</h1>
     <p>Click the button below to get some cute messages</p>
     <button id="messageButton">Click here  💌</button>
     <div id="messageDisplay"></div>
